# elasticsearch_tutorial

./: BM25.py  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
